Crude implementation of sounds using Tone.js

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,16 @@
 
   <body>
 
+    <button id="speaker"></button>
+    <button id="play"></button>
+
     <div id="canvas-container">
     </div>
 
   </body>
   
+  <script src="tone.js"></script>
+  <script src="constants.js"></script>
   <script src="classes.js"></script>
   <script src="sketch.js"></script>
 
