--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
 
   </body>
   
+  <script src="constants.js"></script>
   <script src="classes.js"></script>
   <script src="sketch.js"></script>
 
