--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,10 @@
     <title>p5.js example</title>
     <style> body {padding: 0; margin: 0;} </style>
 
-    <script src="p5.js"></script>
-    <script src="p5.sound.js"></script>
-    <script src="matter.js" type="text/javascript"></script>
+    <script src="libs/p5.js"></script>
+    <script src="libs/p5.sound.js"></script>
+    <script src="libs/matter.js" type="text/javascript"></script>
+    <script src="libs/osc-browser.min.js"></script>
   </head>
 
   <body>
@@ -19,6 +20,7 @@
 
   </body>
   
+  <script src="osc-server.js"></script>
   <script src="constants.js"></script>
   <script src="classes.js"></script>
   <script src="sketch.js"></script>
