--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <script src="matter.js" type="text/javascript"></script>
   </head>
 
-  <body>
+  <body style="overflow: hidden">
 
     <div id="canvas-container">
     </div>
