Help image's draggable property set to false.

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div id="help-div">
-      <img id="help-img" src="res/balldance.png" alt="">
+      <img id="help-img" draggable="false" src="res/balldance.png" alt="">
     </div>
 
   </body>
